manifests/cluster-prometheus/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-k8s
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "prometheus-k8s"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - prometheus-k8s.stg.showks.containerdays.jp
      secretName: tls-certificate
  rules:
  - host: prometheus-k8s.stg.showks.containerdays.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-k8s
          servicePort: 9090

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "grafana"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - grafana.stg.showks.containerdays.jp
      secretName: tls-certificate
  rules:
  - host: grafana.stg.showks.containerdays.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
